# mysql-insert-ids

./: .envrc.template  Cargo.toml  README.md  docker-compose.yml
migrations/: 20220319021607_add_test_table.sql
src/: main.rs
